<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">

    <ImageView
        android:id="@+id/imageViewOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/verify_you_number_otp"
        app:layout_constraintTop_toBottomOf="@id/imageViewOtp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="32dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_your_otp"
        android:textAlignment="center"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/please_your_country_text"
        app:layout_constraintTop_toBottomOf="@id/verify_you_number_otp"
        android:text="@string/we_send_otp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="32dp"
        android:textColor="#000"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal" />


    <EditText
        android:id="@+id/editTextPhoneOtp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:padding="16dp"
        android:hint="@string/your_phone_number"
        android:ems="10"
        android:inputType="phone"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@id/please_your_country_text"
        app:layout_constraintRight_toRightOf="@id/please_your_country_text"
        app:layout_constraintTop_toBottomOf="@id/please_your_country_text"/>


    <Button
        android:id="@+id/otp_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/enter_otp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/editTextPhoneOtp"
        app:layout_constraintLeft_toLeftOf="@id/editTextPhoneOtp"
        app:layout_constraintRight_toRightOf="@id/editTextPhoneOtp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/otp_form_feedback_text"
        android:text="@string/working"
        app:layout_constraintTop_toBottomOf="@id/otp_button"
        app:layout_constraintLeft_toLeftOf="@id/otp_button"
        app:layout_constraintRight_toRightOf="@id/otp_button"
        android:layout_marginTop="16dp"
        android:textColor="#D30202"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/otp_progress_bar"
        app:layout_constraintTop_toTopOf="@id/otp_button"
        app:layout_constraintBottom_toBottomOf="@id/otp_button"
        app:layout_constraintRight_toRightOf="@id/otp_button"
        android:visibility="invisible"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginRight="16dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>