<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/verify_you_number"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/verify_your_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/please_your_country_text"
        app:layout_constraintTop_toBottomOf="@id/verify_you_number"
        android:text="@string/country_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="32dp"
        android:textColor="#000"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:padding="16dp"
        android:hint="+99"
        android:inputType="number"
        android:background="@drawable/text_input_bg"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintLeft_toLeftOf="@id/please_your_country_text"
        app:layout_constraintTop_toBottomOf="@+id/please_your_country_text" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:padding="16dp"
        android:hint="@string/your_phone_number"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/generate_otp_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/generate_otp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber" />

    <ProgressBar
        app:layout_constraintTop_toBottomOf="@id/please_your_country_text"
        app:layout_constraintBottom_toTopOf="@id/editTextNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/login_feed_back"
        app:layout_constraintTop_toBottomOf="@id/generate_otp_button"
        app:layout_constraintLeft_toLeftOf="@id/generate_otp_button"
        app:layout_constraintRight_toRightOf="@id/generate_otp_button"
        android:visibility="invisible"
        android:layout_marginTop="25dp"
        android:text="@string/working"
        android:textColor="#DF0303"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>